[metadata]
name = django-nopeek
description = No peek! A Django package encrypting sensitive data
long_description = file: README.md
author = Team Mindy
author_email = developers@mindy.page
url = https://github.com/mindylog/django-nopeek
download_url = https://github.com/mindylog/django-nopeek/tarball/master
classifiers =
	Development Status :: 1 - Planning
	Environment :: Web Environment
	Framework :: Django
	Framework :: Django :: 2.2
	Framework :: Django :: 3.0
	Framework :: Django :: 3.1
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Topic :: Internet :: WWW/HTTP
	Topic :: System :: Networking

[options]
python_requires = >=3.6, <3.9
packages = find:
install_requires =
    tink>=1.5.0
    Django>=2.2
setup_requires =
	setuptools_scm

[options.packages.find]
exclude = tests
